@@ -1,4 +1,6 @@
 
-set "GRAILS_OPTS=-server -Xmx1024M -Xms256M -XX:MaxPermSize=256m"
+set JAVA_OPTS=%JAVA_OPTS% -Xms256m -Xmx512m -XX:PermSize=512m -XX:MaxPermSize=512m
+
+set GRAILS_OPTS=-server -Xmx1024M -Xms256M -XX:PermSize=512m -XX:MaxPermSize=512m
 
 grails -Ddisable.auto.recompile=true run-app
